config/samples/udproute-noreach/server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blixt-udproute-sample
  labels:
    app: blixt-udproute-sample
spec:
  minReadySeconds: 5
  selector:
    matchLabels:
      app: blixt-udproute-sample
  template:
    metadata:
      labels:
        app: blixt-udproute-sample
    spec:
      containers:
      - name: server
        command:
          - ./udp-test-server
          - --dry-run
        image: ghcr.io/kong/blixt-udp-test-server:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9875
          protocol: UDP
        - containerPort: 9876
          protocol: UDP
        - containerPort: 9877
          protocol: UDP
        - name: healthz
          containerPort: 9878
          protocol: TCP
        readinessProbe:
          tcpSocket:
            port: 9878
          initialDelaySeconds: 3
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: blixt-udproute-sample
  name: blixt-udproute-sample
spec:
  ports:
  - name: listener1
    port: 9875
    protocol: UDP
    targetPort: 9875
  - name: listener2
    port: 9876
    protocol: UDP
    targetPort: 9876
  - name: listener3
    port: 9877
    protocol: UDP
    targetPort: 9877
  selector:
    app: blixt-udproute-sample
  type: ClusterIP
