config/samples/udproute-noreach/gateway.yaml
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: blixt-udproute-sample
spec:
  controllerName: konghq.com/blixt
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: blixt-udproute-sample
spec:
  gatewayClassName: blixt-udproute-sample
  listeners:
  - name: udp
    protocol: UDP
    port: 9875
